more half unfinished stuff that ill do tomorrow